--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,20 +13,38 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "vue": "^3.5.13"
+    "@formkit/drag-and-drop": "^0.5.3",
+    "@primeuix/themes": "^1.1.2",
+    "@primevue/forms": "^4.3.5",
+    "@tailwindcss/vite": "^4.1.10",
+    "axios": "^1.10.0",
+    "chart.js": "^4.5.0",
+    "pinia": "^3.0.3",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.5",
+    "uuid": "^11.1.0",
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.10",
     "@tsconfig/node22": "^22.0.1",
-    "@types/node": "^22.14.0",
+    "@types/node": "^22.15.32",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.5.0",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
+    "dotenv": "^16.5.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "jiti": "^2.4.2",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.5.6",
     "prettier": "3.5.3",
+    "tailwindcss": "^4.1.10",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
